--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,21 +13,21 @@ dock_split_2=-16
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=354
-dock_hsplit_3=-216
+dock_hsplit_3=-507
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UI/notebook/tasks/taskCollectParsnip.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/notebook/", "res://UI/notebook/tasks/", "res://UI/items/", "res://resources/", "res://resources/UI/", "res://resources/Sprout Lands - UI Pack - Premium pack/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/Mouse sprites/", "res://GameSystem/", "res://GameSystem/tiles/", "res://GameSystem/tasks/", "res://GameSystem/crops/")
+dock_filesystem_selected_paths=PackedStringArray("res://GameSystem/save/SaveLoadGame.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/menu/", "res://resources/", "res://resources/UI/", "res://GameSystem/", "res://GameSystem/save/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://UI/menu/settingsGUI.tscn", "res://UI/menu/menu_gui.tscn", "res://GameSystem/music/music.tscn", "res://UI/notebook/notebook.tscn", "res://GameSystem/crops/cucumberPlant.tscn")
+open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://UI/menu/settingsGUI.tscn", "res://UI/menu/menu_gui.tscn", "res://GameSystem/music/music.tscn", "res://UI/notebook/notebook.tscn", "res://GameSystem/crops/cucumberPlant.tscn", "res://UI/HUD/hud.tscn")
 current_scene="res://Levels/gameLevel.tscn"
 center_split_offset=-349
 selected_default_debugger_tab_idx=0
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://GameSystem/animals/animal.gd", "res://GameSystem/dialog/animalLand.gd", "res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://GameSystem/effects/dayOverlay.gd", "res://UI/dialog/dialogBox.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://GameSystem/tiles/farmingLand.gd", "res://objects/usableItems/feedItem.gd", "res://GameSystem/animals/foodTrough.gd", "res://Levels/gameLevel.gd", "res://GameSystem/save/gameLevel.gd", "res://UI/GUI.gd", "res://UI/hotbar/hotbar.gd", "res://UI/inventory/hotbarSlotGui.gd", "res://UI/HUD/hud.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventoryTwo.gd", "res://UI/inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://GameSystem/animals/itemAnimals.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://UI/hotbar/ItemInHotbarSlotGui.gd", "res://UI/inventory/ItemInSlotGui.gd", "res://objects/usableItems/itemResource.gd", "res://GameSystem/shop/itemSlot.gd", "res://UI/inventory/itemSlotGui.gd", "res://objects/pickupItems/loot.gd", "res://GameSystem/mainMenu/MainMenu.gd", "res://UI/notebook/market.gd", "res://UI/menu/menu_gui.gd", "res://UI/notebook/notebook.gd", "res://UI/notebook/notebookIcon.gd", "res://GameSystem/crops/plantedPlant.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://GameSystem/tiles/rockBigSeasons.gd", "res://GameSystem/tiles/rockSmallSeasons.gd", "res://GameSystem/save/SaveLoadGame.gd", "res://GameSystem/seasonSummary.gd", "res://objects/usableItems/seedItems.gd", "res://UI/selectableItem.gd", "res://GameSystem/shop/sellItemSlot.gd", "res://UI/menu/settingsGUI.gd", "res://GameSystem/shop/ShopInventory.gd", "res://UI/summary/summaryGui.gd", "res://UI/notebook/Tasks.gd", "res://GameSystem/tasks/Tasks.gd", "res://UI/notebook/tasks/taskSlot.gd", "res://GameSystem/dialog/textbox.gd", "res://GameSystem/dialog/textManager.gd", "res://GameSystem/tiles/tilledSoil.gd", "res://GameSystem/TimeManager.gd", "res://objects/usableItems/tools.gd", "res://GameSystem/tiles/treeSeasons.gd", "res://GameSystem/animals/waterTrough.gd", "res://GameSystem/tiles/worldTileMap.gd"]
-selected_script="res://UI/GUI.gd"
+selected_script="res://GameSystem/TimeManager.gd"
 open_help=["CollisionShape2D", "Dictionary", "Node", "Object", "ResourceLoader", "ResourceSaver"]
 script_split_offset=247
 list_split_offset=179
