--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -255,7 +255,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 9,
-"scroll_position": 3.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -381,10 +381,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -555,16 +555,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 28,
+"scroll_position": 46.0,
 "selection": true,
-"selection_from_column": 8,
-"selection_from_line": 0,
-"selection_to_column": 23,
-"selection_to_line": 0,
+"selection_from_column": 2,
+"selection_from_line": 28,
+"selection_to_column": 17,
+"selection_to_line": 28,
 "syntax_highlighter": "GDScript"
 }
 
@@ -615,16 +615,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 19,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 1,
-"selection_from_line": 14,
-"selection_to_column": 50,
-"selection_to_line": 14,
+"selection_from_column": 5,
+"selection_from_line": 19,
+"selection_to_column": 14,
+"selection_to_line": 19,
 "syntax_highlighter": "GDScript"
 }
 
@@ -817,11 +817,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 87,
-"scroll_position": 9.0,
+"row": 33,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -881,16 +881,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 12,
-"selection_to_column": 18,
-"selection_to_line": 12,
+"row": 57,
+"scroll_position": 24.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
